--- a/EmpManager/src/main/resources/application.properties
+++ b/EmpManager/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=EmpManager
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/empmanager
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.jpa.properties.hibernate.dialec=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
