--- a/EmpManager/src/main/resources/application.properties
+++ b/EmpManager/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.application.name=EmpManager
+spring.application.name=emp-project
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/empmanager
+spring.datasource.url=jdbc:mysql://localhost:3306/bootdatabase
 spring.datasource.username=root
 spring.datasource.password=12345678
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver <<== do not use this bcoz 
+#The driver is automatically registered via the SPI and manual loading of the driver class is generally unnecessary.
 spring.jpa.properties.hibernate.dialec=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
